# EWRWC

./: README.md
Firmware/: .gitignore  CMakeLists.txt  README.md  platformio.ini
Firmware/lib/bq25792/: CMakeLists.txt  bq25792.c  bq25792.cpp  bq25792.h
Firmware/lib/pio_i2c/: CMakeLists.txt  i2c.pio  main.c
Firmware/lib/pio_spi/: CMakeLists.txt  clocked_input.pio  main.c  spi_slave.pio
Firmware/lib/ssd1306/: CMakeLists.txt  main.c  ssd1306.c  ssd1306.h
Firmware/lib/vl53l0x/: CMakeLists.txt  main.c  tof.c  tof.h
Firmware/src/: main.c  main.c.old  main.cpp
PCB/: Pi_zero_header.kicad_pcb  Pi_zero_header.kicad_pro  Pi_zero_header.kicad_sch  fp-lib-table  sym-lib-table
PCB/project_lib/: bom2grouped_csv_jlcpcb.xsl
PCB/project_lib/ul_BQ25672RQMR/KiCADv6/: 2023-12-12_14-16-37.kicad_sym
PCB/project_lib/ul_BQ25672RQMR/KiCADv6/footprints.pretty/: RQM0029A-MFG.kicad_mod
PCB/project_lib/ul_PQ25792RQMR/KiCADv6/: 2023-12-12_14-19-57.kicad_sym
PCB/project_lib/ul_PQ25792RQMR/KiCADv6/footprints.pretty/: RQM0029A-MFG.kicad_mod
PCB/project_lib/ul_TPS630701RNMR/KiCADv6/: 2023-12-29_16-19-24.kicad_sym
PCB/project_lib/ul_TPS630701RNMR/KiCADv6/footprints.pretty/: RNM0015A.kicad_mod
Software/: .gitignore  analyzer.py  dl_static.bash  main.py  motors.py  test.py
Software/static/: python_editor.js  scripts.js  scripts_blockly.js  styles.css
Software/templates/: index.html
docs/: README.md
docs/images/: bq25792.xcf  crystal.xcf  tps63070.xcf
